finished index.html started recipes.html

--- a/index.html
+++ b/index.html
@@ -12,15 +12,54 @@
             <div class="logo">
                 <img src="images/ryparis-logo.png" alt="ryparis logo">
             </div>
-            <div class="right">
-                <h1>Popular Recipes What's New Categories Meal Ideas</h1>
-            </div>
+            <div class="right">Popular Recipes What's New Categories Meal Ideas</div>
         </div>
         <div class="c1Image">
             <img class="charcuterie" src="images/hero-image.jpg" alt="charcuterie board">
-             <span class="Center">START THE WEEK OFF RIGHT</span>   
+             <h1 class="Center">START THE WEEK OFF RIGHT</h1>   
         </div>
     </div>
-    <div class="container2"></div>
+    <div class="container2">
+        <h2>Every Day Categories</h2>
+        <p>Everyday Food has developed recipes with the home cook in mind. These delicious dishes featured on "RY Paris" call for simple ingredients that you alread have in your pantry or can easily find at your local grocery stores and farmers' markets.</p>
+        <div class="c2images">
+            <img src="images/breakfast-ideas.jpg" alt="breakfast meal">
+            <img src="images/vegetarian-ideas.jpg" alt="vegitarian salad">
+            <img src="images/cold-weather-dinners.jpeg" alt="roast and potatos">
+        </div>
+        <div class="c2text">Breakfast Most Important Meal</div>
+        <div class="c2text">Vegitairan Lunch Ideas</div>
+        <div class="c2text">Breakfast Most Important Meal</div>
+    </div>
+    <div class="container3">
+        <h2>Healthy Recipes of the Week</h2>
+        <p>This Weeks top award winners to critically-acclaimed recipe gems, check out these original recipes from home cook and professional chefs around the country.</p>
+        <img class="c3images" src="images/fajita-peppers.jpeg" alt="fajitas stuffed peppers">
+        <img class="c3images" src="images/muffins.jpeg" alt="Muffins">
+        <img class="c3images" src="images/eggplant-parmesan.jpg" alt="eggplant parmesan">
+        <img class="c3images" src="images/" alt="">
+        <div class="c3text">fajita-Stuffed Peppers</div>
+        <div class="c3text">Roe's Breakfast Muffins</div>
+        <div class="c3text">Eggplant Parmesan</div>
+        <div class="c3text">Teriyaki Chicken Thighs</div>
+    </div>
+    <div class="container4">
+        <h2>Where to Eat</h2>
+        <p>This is not the aspirational fluff of Instagram wall neon; it's fact. Recent survays have shown that a majority of travelers consider food first when planning a trip, even ahead of where they sleep. Add to this that people are traveling more thatn ever befor - earthlings logged a record-breaking 1.4 billion international trips last year - and its safe to say that the hunger for new culinary experiences is more ravenous than ever.<br>While the endlessly alluring bistros of Paris, izakayas of Tokyo, shwarma stands of Tel Aviv, and tasting menues of Mexico City will always top many people's lis of cravings, we're continually on the lookout for something new to fill our bellies, our passports, and our feeds.</p>
+        <div class="c4image">
+            <img src="images/burger.jpg" alt="burger">
+            <img src="images/pizza.jpeg" alt="pizza">
+            <img src="" alt="">
+        </div>
+        <div class="c4text">
+            <div class="c4text">Best Sandwiches in America</div>
+            <div class="c4image">50 States of Pizza Slices</div>
+            <div class="c4image">City Guides</div>
+        </div>
+    </div>
+    <div class="footer">
+        <span class="copyright">© 2020 RY PARIS</span>
+        <span class="right">Site Map Privacey Policy About Advertise Help</span>
+    </div>
 </body>
 </html>
