more to recipes.html

--- a/recipes.html
+++ b/recipes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container1">
+    <div class="rContainer1">
         <div class="header">
             <div class="logo">
                 <img src="images/ryparis-logo.png" alt="ryparis logo">
@@ -18,7 +18,27 @@
             <img class="belganBurger" src="images/bengal-burger.jpg" alt="Belgan Burger">
              <h1 class="Center">HAMBURGER OF THE WEEK</h1>   
         </div>
+        <div class="recipeStats">
+            <div>Time</div>
+            <div>
+                <span>Level: Easy</span>
+                <span>Prep: 10 min</span>
+                <span>Yelid: 4 Hamburgers</span>
+            </div>
+            <div>
+                <span>Total: 25 min</span>
+                <span>Cook: 15 min</span>
+            </div>
+        </div>
+    </div>
+    <div class="rContainer2">
         
+    </div>
+
+
+    <div class="footer">
+        <span class="copyright">© 2020 RY PARIS</span>
+        <span class="right">Site Map Privacey Policy About Advertise Help</span>
     </div>
 </body>
 </html>
