finished recipies.html

--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,7 @@
             <div class="right">Popular Recipes What's New Categories Meal Ideas</div>
         </div>
         <div class="c1Image">
-            <img class="belganBurger" src="images/bengal-burger.jpg" alt="Belgan Burger">
+            <img class="belganBurger" src="images/bengal-burger.jpg" alt="Bengal Burger">
              <h1 class="Center">HAMBURGER OF THE WEEK</h1>   
         </div>
         <div class="recipeStats">
@@ -32,7 +32,59 @@
         </div>
     </div>
     <div class="rContainer2">
-        
+        <div class="Center">
+            Bengal Burger
+        </div>
+        <div class="review">
+
+        </div>
+        <div class="rc2Text">
+            Bacon ipsum dolor amet laborum kevin shank elit burgdoggen doner voluptate bacon lorem. Short loin minim culpa, dolor porchetta aute bresaola sed ball tip exercitation cupidatat. Corned beef landjaeger ham hock, ullamco incididunt ham pork nostrud ut exercitation. Pariatur est fatback capicola, reprehenderit alcatra qui. Aliquip in cow, corned beef ground round deserunt nostrud chuck.
+        </div>
+    </div>
+    <div class="rContainer3">
+        <div class="ingredients">
+            Ingredients
+            <ul>
+                <li>ground round tail jerky frankfurter cupidatat</li>
+                <li>Voluptate culpa bacon ea shank</li>
+                <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
+                <li>cillum duis tempor bacon shoulder </li>
+                <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf.</li>
+                <li>Proident flank ground round do quis consectetur </li>
+                <li>pancetta culpa meatloaf velit id esse.</li>
+                <li>ground round tail jerky frankfurter cupidatat</li>
+                <li>Voluptate culpa bacon ea shank</li>
+                <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
+                <li>cillum duis tempor bacon shoulder </li>
+                <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf.</li>
+                <li>Proident flank ground round do quis consectetur </li>
+                <div>Spice Mix</div>
+                <li>ground round tail jerky frankfurter cupidatat</li>
+                <li>Voluptate culpa bacon ea shank</li>
+                <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
+            </ul>    
+        </div>
+        <div class="directions">
+            Directions
+            <div>
+                <ol>
+                    <li>ground round tail jerky frankfurter cupidatat. Bacon ipsum dolor amet cupidatat pariatur flank cow kevin ribeye boudin duis chuck leberkas swine jerky.</li>
+                    <li>Turducken ut pork belly spare ribs commodo qui ut, deserunt burgdoggen et cillum sint. Voluptate culpa bacon ea shank</li>
+                    <li>Turkey porchetta corned beef drumstick aliquip biltong. Do ea tri-tip jowl. Turducken alcatra ground round pork, occaecat beef sunt</li>
+                    <li>Cow dolore ut excepteur short loin. Cillum duis tempor bacon shoulder </li>
+                    <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf. tongue drumstick tenderloin magna beef ribs picanha sirloin. Consectetur sunt chicken bresaola nostrud occaecat anim excepteur ut esse ham doner. Prosciutto beef mollit, consectetur proident bresaola filet mignon cillum duis tempor bacon shoulder landjaeger sed.</li>
+                    <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf. Swine occaecat cow, short loin kevin pariatur Proident flank ground round do quis consectetur </li>
+                    <li>Proident flank ground round do quis consectetur commodo, pancetta culpa meatloaf velit id esse. pancetta culpa meatloaf velit id esse.</li>
+                    <li>Ground round cupidatat enim pork chop. ground round tail jerky frankfurter cupidatat</li>
+                    <div>Timing for a Countertop Grill</div>
+                    <li>Enim porchetta brisket venison pancetta. Magna ea biltong burgdoggen, elit landjaeger ullamco nulla. Voluptate culpa bacon ea shank</li>
+                    <li>Aliqua spare ribs chislic beef ribs. Salami ham meatloaf, shank ground round duis et. Turducken alcatra ground round pork, occaecat beef sunt</li>
+                    <li>Does your lorem ipsum text long for something a little meatier? Give our generator a try… it’s tasty! </li>
+                </ol>
+            </div>
+        </div>
+
     </div>
 
 
