--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="logo">
                 <img src="images/ryparis-logo.png" alt="ryparis logo">
             </div>
-            <div class="right">Popular Recipes What's New Categories Meal Ideas</div>
+            <div class="right"><a href="recipes.html">Popular Recipes</a> What's New Categories Meal Ideas</div>
         </div>
         <div class="c1Image">
             <img class="charcuterie" src="images/hero-image.jpg" alt="charcuterie board">
