--- a/recipes.html
+++ b/recipes.html
@@ -10,11 +10,11 @@
     <div class="rContainer1">
         <div class="header">
             <div class="logo">
-                <img src="images/ryparis-logo.png" alt="ryparis logo">
+                <a href="index.html"><img src="images/ryparis-logo.png" alt="ryparis logo"></a>
             </div>
             <div class="right">Popular Recipes What's New Categories Meal Ideas</div>
         </div>
-        <div class="c1Image">
+        <div class="c1image">
             <img class="belganBurger" src="images/bengal-burger.jpg" alt="Bengal Burger">
              <h1 class="Center">HAMBURGER OF THE WEEK</h1>   
         </div>
