--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container1">
         <div class="header">
             <div class="logo">
-                <img src="images/ryparis-logo.png" alt="ryparis logo">
+                <a href="index.html"><img src="images/ryparis-logo.png" alt="ryparis logo"></a>
             </div>
             <div class="right"><a href="recipes.html">Popular Recipes</a> What's New Categories Meal Ideas</div>
         </div>
