--- a/recipes.html
+++ b/recipes.html
@@ -5,46 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="rContainer1">
+    <div class="rcontainer1">
         <div class="header">
             <div class="logo">
                 <a href="index.html"><img src="images/ryparis-logo.png" alt="ryparis logo"></a>
             </div>
             <div class="right">Popular Recipes What's New Categories Meal Ideas</div>
         </div>
-        <div class="c1image">
-            <img class="belganBurger" src="images/bengal-burger.jpg" alt="Bengal Burger">
-             <h1 class="Center">HAMBURGER OF THE WEEK</h1>   
+        <div class="rc1image">
+             <h1 class="center">HAMBURGER OF THE WEEK</h1>   
         </div>
         <div class="recipeStats">
-            <div>Time</div>
+            <h2>Time</h2>
             <div>
-                <span>Level: Easy</span>
-                <span>Prep: 10 min</span>
+                <span class="stat">Level: Easy</span>
+                <span class="stat">Prep: 10 min</span>
                 <span>Yelid: 4 Hamburgers</span>
             </div>
             <div>
-                <span>Total: 25 min</span>
-                <span>Cook: 15 min</span>
+                <span class="stat">Total: 25 min</span>
+                <span class="stat">Cook: 15 min</span>
             </div>
         </div>
     </div>
-    <div class="rContainer2">
-        <div class="Center">
+    <div class="rcontainer2">
+        <h2 class="center">
             Bengal Burger
-        </div>
+        </h2>
         <div class="review">
-
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span>26 Reviews</span><br>
+            <input type="button" value="Save Recipe"> 
+            <button class="brn-print" type="button">
+                <span class="material-symbols-outlined">
+                    print</span>
+            </button>
+            
         </div>
+
         <div class="rc2Text">
             Bacon ipsum dolor amet laborum kevin shank elit burgdoggen doner voluptate bacon lorem. Short loin minim culpa, dolor porchetta aute bresaola sed ball tip exercitation cupidatat. Corned beef landjaeger ham hock, ullamco incididunt ham pork nostrud ut exercitation. Pariatur est fatback capicola, reprehenderit alcatra qui. Aliquip in cow, corned beef ground round deserunt nostrud chuck.
         </div>
     </div>
-    <div class="rContainer3">
+    <div class="rcontainer3">
         <div class="ingredients">
-            Ingredients
+            <h2>Ingredients</h2>
             <ul>
                 <li>ground round tail jerky frankfurter cupidatat</li>
                 <li>Voluptate culpa bacon ea shank</li>
@@ -59,14 +72,14 @@
                 <li>cillum duis tempor bacon shoulder </li>
                 <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf.</li>
                 <li>Proident flank ground round do quis consectetur </li>
-                <div>Spice Mix</div>
+                <h2>Spice Mix</h2>
                 <li>ground round tail jerky frankfurter cupidatat</li>
                 <li>Voluptate culpa bacon ea shank</li>
                 <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
             </ul>    
         </div>
         <div class="directions">
-            Directions
+            <h2>Directions</h2>
             <div>
                 <ol>
                     <li>ground round tail jerky frankfurter cupidatat. Bacon ipsum dolor amet cupidatat pariatur flank cow kevin ribeye boudin duis chuck leberkas swine jerky.</li>
@@ -77,7 +90,7 @@
                     <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf. Swine occaecat cow, short loin kevin pariatur Proident flank ground round do quis consectetur </li>
                     <li>Proident flank ground round do quis consectetur commodo, pancetta culpa meatloaf velit id esse. pancetta culpa meatloaf velit id esse.</li>
                     <li>Ground round cupidatat enim pork chop. ground round tail jerky frankfurter cupidatat</li>
-                    <div>Timing for a Countertop Grill</div>
+                    <h2>Timing for a Countertop Grill</h2>
                     <li>Enim porchetta brisket venison pancetta. Magna ea biltong burgdoggen, elit landjaeger ullamco nulla. Voluptate culpa bacon ea shank</li>
                     <li>Aliqua spare ribs chislic beef ribs. Salami ham meatloaf, shank ground round duis et. Turducken alcatra ground round pork, occaecat beef sunt</li>
                     <li>Does your lorem ipsum text long for something a little meatier? Give our generator a try… it’s tasty! </li>
