finished css waiting for class to finalize

--- a/recipes.html
+++ b/recipes.html
@@ -24,7 +24,7 @@
             <div>
                 <span class="stat">Level: Easy</span>
                 <span class="stat">Prep: 10 min</span>
-                <span>Yelid: 4 Hamburgers</span>
+                <span class="stat">Yelid: 4 Hamburgers</span>
             </div>
             <div>
                 <span class="stat">Total: 25 min</span>
