--- a/recipes.html
+++ b/recipes.html
@@ -43,12 +43,13 @@
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span>26 Reviews</span><br>
-            <input type="button" value="Save Recipe"> 
-            <button class="brn-print" type="button">
-                <span class="material-symbols-outlined">
-                    print</span>
-            </button>
-            
+            <div class="buttons">
+                <input type="button" value="Save Recipe"> 
+                <button class="brn-print" type="button">
+                    <span class="material-symbols-outlined">
+                        print</span>
+                </button>
+            </div>
         </div>
 
         <div class="rc2Text">
