fixed popular recipes link

--- a/recipes.html
+++ b/recipes.html
@@ -14,7 +14,7 @@
             <div class="logo">
                 <a href="index.html"><img src="images/ryparis-logo.png" alt="ryparis logo"></a>
             </div>
-            <div class="right">Popular Recipes What's New Categories Meal Ideas</div>
+            <div class="right"><a href="recipes.html">Popular Recipes</a> What's New Categories Meal Ideas</div>
         </div>
         <div class="rc1image">
              <h1 class="center">HAMBURGER OF THE WEEK</h1>   
