ran through w3c validatior

--- a/recipes.html
+++ b/recipes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -57,48 +57,56 @@
         </div>
     </div>
     <div class="rcontainer3">
-        <div class="ingredients">
-            <h2>Ingredients</h2>
-            <ul>
-                <li>ground round tail jerky frankfurter cupidatat</li>
-                <li>Voluptate culpa bacon ea shank</li>
-                <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
-                <li>cillum duis tempor bacon shoulder </li>
-                <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf.</li>
-                <li>Proident flank ground round do quis consectetur </li>
-                <li>pancetta culpa meatloaf velit id esse.</li>
-                <li>ground round tail jerky frankfurter cupidatat</li>
-                <li>Voluptate culpa bacon ea shank</li>
-                <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
-                <li>cillum duis tempor bacon shoulder </li>
-                <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf.</li>
-                <li>Proident flank ground round do quis consectetur </li>
-                <h2>Spice Mix</h2>
-                <li>ground round tail jerky frankfurter cupidatat</li>
-                <li>Voluptate culpa bacon ea shank</li>
-                <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
-            </ul>    
-        </div>
-        <div class="directions">
-            <h2>Directions</h2>
-            <div>
-                <ol>
-                    <li>ground round tail jerky frankfurter cupidatat. Bacon ipsum dolor amet cupidatat pariatur flank cow kevin ribeye boudin duis chuck leberkas swine jerky.</li>
-                    <li>Turducken ut pork belly spare ribs commodo qui ut, deserunt burgdoggen et cillum sint. Voluptate culpa bacon ea shank</li>
-                    <li>Turkey porchetta corned beef drumstick aliquip biltong. Do ea tri-tip jowl. Turducken alcatra ground round pork, occaecat beef sunt</li>
-                    <li>Cow dolore ut excepteur short loin. Cillum duis tempor bacon shoulder </li>
-                    <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf. tongue drumstick tenderloin magna beef ribs picanha sirloin. Consectetur sunt chicken bresaola nostrud occaecat anim excepteur ut esse ham doner. Prosciutto beef mollit, consectetur proident bresaola filet mignon cillum duis tempor bacon shoulder landjaeger sed.</li>
-                    <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf. Swine occaecat cow, short loin kevin pariatur Proident flank ground round do quis consectetur </li>
-                    <li>Proident flank ground round do quis consectetur commodo, pancetta culpa meatloaf velit id esse. pancetta culpa meatloaf velit id esse.</li>
-                    <li>Ground round cupidatat enim pork chop. ground round tail jerky frankfurter cupidatat</li>
-                    <h2>Timing for a Countertop Grill</h2>
-                    <li>Enim porchetta brisket venison pancetta. Magna ea biltong burgdoggen, elit landjaeger ullamco nulla. Voluptate culpa bacon ea shank</li>
-                    <li>Aliqua spare ribs chislic beef ribs. Salami ham meatloaf, shank ground round duis et. Turducken alcatra ground round pork, occaecat beef sunt</li>
-                    <li>Does your lorem ipsum text long for something a little meatier? Give our generator a try… it’s tasty! </li>
-                </ol>
+        <div class="rc3text">
+            <div class="ingredients">
+                <div class="h2">Ingredients</div>
+                <ul>
+                    <li>ground round tail jerky frankfurter cupidatat</li>
+                    <li>Voluptate culpa bacon ea shank</li>
+                    <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
+                    <li>cillum duis tempor bacon shoulder </li>
+                    <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf.</li>
+                    <li>Proident flank ground round do quis consectetur </li>
+                    <li>pancetta culpa meatloaf velit id esse.</li>
+                    <li>ground round tail jerky frankfurter cupidatat</li>
+                    <li>Voluptate culpa bacon ea shank</li>
+                    <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
+                    <li>cillum duis tempor bacon shoulder </li>
+                    <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf.</li>
+                    <li>Proident flank ground round do quis consectetur </li>
+                </ul>
+                <br>
+                <div class="h2">Spice Mix</div>
+                <ul>
+                    <li>ground round tail jerky frankfurter cupidatat</li>
+                    <li>Voluptate culpa bacon ea shank</li>
+                    <li>Turducken alcatra ground round pork, occaecat beef sunt</li>
+                </ul>    
+            </div>
+            <div class="directions">
+                <div class="h2">Directions</div>
+                <div>
+                    <ol>
+                        <li>ground round tail jerky frankfurter cupidatat. Bacon ipsum dolor amet cupidatat pariatur flank cow kevin ribeye boudin duis chuck leberkas swine jerky.</li>
+                        <li>Turducken ut pork belly spare ribs commodo qui ut, deserunt burgdoggen et cillum sint. Voluptate culpa bacon ea shank</li>
+                        <li>Turkey porchetta corned beef drumstick aliquip biltong. Do ea tri-tip jowl. Turducken alcatra ground round pork, occaecat beef sunt</li>
+                        <li>Cow dolore ut excepteur short loin. Cillum duis tempor bacon shoulder </li>
+                        <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf. tongue drumstick tenderloin magna beef ribs picanha sirloin. Consectetur sunt chicken bresaola nostrud occaecat anim excepteur ut esse ham doner. Prosciutto beef mollit, consectetur proident bresaola filet mignon cillum duis tempor bacon shoulder landjaeger sed.</li>
+                        <li>Landjaeger eu cow dolore, velit ipsum sed doner meatloaf. Swine occaecat cow, short loin kevin pariatur Proident flank ground round do quis consectetur </li>
+                        <li>Proident flank ground round do quis consectetur commodo, pancetta culpa meatloaf velit id esse. pancetta culpa meatloaf velit id esse.</li>
+                        <li>Ground round cupidatat enim pork chop. ground round tail jerky frankfurter cupidatat</li>
+                    </ol>
+                    <br>
+                    <span class="h2">Timing for a Countertop Grill</span>
+                    <ol>
+                        <li>Enim porchetta brisket venison pancetta. Magna ea biltong burgdoggen, elit landjaeger ullamco nulla. Voluptate culpa bacon ea shank</li>
+                        <li>Aliqua spare ribs chislic beef ribs. Salami ham meatloaf, shank ground round duis et. Turducken alcatra ground round pork, occaecat beef sunt</li>
+                        <li>Does your lorem ipsum text long for something a little meatier? </li>
+                    </ol>
+                </div>
             </div>
         </div>
-
+        <div class="videoLink">Want to learn to make more food? Click the link below <br> <a href="https://www.youtube.com/watch?v=S-TmmjEN-V0">https://www.youtube.com/watch?v=S-TmmjEN-V0</a></div>
     </div>
 
 
