--- a/index.html
+++ b/index.html
@@ -46,17 +46,23 @@
             <p>This Weeks top award winners to critically-acclaimed recipe gems, check out these original recipes from home cook and professional chefs around the country.</p>
         </div>
         <div class="c3images">
-            <img class="c3i" src="images/fajita-peppers.jpeg" alt="fajitas stuffed peppers">
-            <img class="c3i" src="images/muffins.jpeg" alt="Muffins">
-            <img class="c3i" src="images/eggplant-parmesan.jpg" alt="eggplant parmesan">
-            <img class="c3i" src="images/Easy-Teriyaki-Chicken-IMAGE-30.jpg" alt="Teriyaki Chicken">
-    </div>
-    <div class="c3text">
-        <div class="c3t">fajita-Stuffed Peppers</div>
-        <div class="c3t">Roe's Breakfast Muffins</div>
-        <div class="c3t">Eggplant Parmesan</div>
-        <div class="c3t">Teriyaki Chicken Thighs</div>
-    </div>
+            <div class="c3i">
+                <img src="images/fajita-peppers.jpeg" alt="fajitas stuffed peppers">
+                <div class="c3t">Fajita-Stuffed Peppers</div>
+            </div> 
+            <div class="c3i">   
+                <img src="images/muffins.jpeg" alt="Muffins">
+                <div class="c3t">Roe's Breakfast Muffins</div>
+            </div>
+            <div class="c3i">    
+                <img src="images/eggplant-parmesan.jpg" alt="eggplant parmesan">
+                <div class="c3t">Eggplant Parmesan</div>
+            </div>
+            <div class="c3i">    
+                <img class="c3i" src="images/Easy-Teriyaki-Chicken-IMAGE-30.jpg" alt="Teriyaki Chicken">
+                <div class="c3t">Teriyaki Chicken Thighs</div>
+            </div>    
+        </div>
     </div>
     <div class="container4">
         <div class="c4header">
